# serializer version: 1
# name: test_mlbstats[api_error_invalid_league]
  dict({
    'api_message': None,
    'api_url': 'https://statsapi.mlb.com/api/v1/schedule/games?sportId=UNKNOWN_SPORTID&startDate=2026-05-22&endDate=2026-05-24',
    'attribution': 'Copyright 2026 MLB Advanced Media',
    'balls': None,
    'clock': 'Final',
    'date': '2026-05-30T17:05:00Z',
    'down_distance_text': None,
    'event_id': '816952',
    'event_name': 'None@None',
    'event_stream': None,
    'event_url': None,
    'friendly_name': 'api_error_invalid_league',
    'icon': 'mdi:scoreboard',
    'last_play': None,
    'league': 'XXX',
    'league_logo': 'https://cdn0.iconfinder.com/data/icons/shift-interfaces/32/Error-512.png',
    'league_name': None,
    'league_path': 'INVALID_LEAGUE_PATH',
    'location': None,
    'odds': None,
    'on_first': None,
    'on_second': None,
    'on_third': None,
    'opponent_abbr': None,
    'opponent_colors': list([
      '#D3D3D3',
      '#A9A9A9',
    ]),
    'opponent_conference_id': None,
    'opponent_homeaway': 'away',
    'opponent_id': '1410',
    'opponent_logo': None,
    'opponent_long_name': 'Lehigh Valley IronPigs',
    'opponent_name': 'Lehigh Valley IronPigs',
    'opponent_rank': None,
    'opponent_record': '26-30',
    'opponent_score': '5',
    'opponent_sets_won': None,
    'opponent_shots_on_target': None,
    'opponent_stream': None,
    'opponent_timeouts': None,
    'opponent_total_shots': None,
    'opponent_url': None,
    'opponent_win_probability': None,
    'opponent_winner': False,
    'outs': None,
    'overunder': None,
    'possession': None,
    'private_fast_refresh': False,
    'quarter': None,
    'season': 'R',
    'series_summary': None,
    'sport': 'baseball',
    'sport_path': 'mlbstats',
    'state': 'POST',
    'strikes': None,
    'team_abbr': None,
    'team_colors': list([
      '#D3D3D3',
      '#A9A9A9',
    ]),
    'team_conference_id': None,
    'team_homeaway': 'home',
    'team_id': '422',
    'team_logo': None,
    'team_long_name': 'Buffalo Bisons',
    'team_name': 'Buffalo Bisons',
    'team_rank': None,
    'team_record': '27-29',
    'team_score': '6',
    'team_sets_won': None,
    'team_shots_on_target': None,
    'team_stream': None,
    'team_timeouts': None,
    'team_total_shots': None,
    'team_url': None,
    'team_win_probability': None,
    'team_winner': True,
    'tv_network': None,
    'venue': 'Sahlen Field',
  })
# ---
# name: test_mlbstats[test_in]
  dict({
    'api_message': None,
    'api_url': 'https://statsapi.mlb.com/api/v1.1/game/816874/feed/live?sportId=11',
    'attribution': 'Copyright 2026 MLB Advanced Media',
    'balls': 3,
    'clock': 'Top 8th',
    'date': '2026-05-30T22:05:00Z',
    'down_distance_text': None,
    'event_id': '816874',
    'event_name': 'JAX@CLT',
    'event_stream': None,
    'event_url': 'https://www.milb.com/gameday/816874',
    'friendly_name': 'test_in',
    'icon': 'mdi:scoreboard',
    'last_play': 'Ben Peoples pitches to Andrew Pintar: Pitch 3 - Ball',
    'league': 'XXX',
    'league_logo': 'https://www.mlbstatic.com/team-logos/league-on-light/milb-alt.svg',
    'league_name': None,
    'league_path': 'aaa',
    'location': 'Charlotte, NC, USA',
    'odds': None,
    'on_first': True,
    'on_second': False,
    'on_third': False,
    'opponent_abbr': 'JAX',
    'opponent_colors': list([
      '#112E51',
      '#D12640',
    ]),
    'opponent_conference_id': 'International League East',
    'opponent_homeaway': 'away',
    'opponent_id': '564',
    'opponent_logo': 'https://www.mlbstatic.com/team-logos/team-cap-on-light/564.svg',
    'opponent_long_name': 'Jacksonville Jumbo Shrimp',
    'opponent_name': 'Jumbo Shrimp',
    'opponent_rank': None,
    'opponent_record': '30-25',
    'opponent_score': '5',
    'opponent_sets_won': None,
    'opponent_shots_on_target': None,
    'opponent_stream': None,
    'opponent_timeouts': None,
    'opponent_total_shots': None,
    'opponent_url': 'https://www.milb.com/jacksonville',
    'opponent_win_probability': None,
    'opponent_winner': None,
    'outs': 0,
    'overunder': None,
    'possession': '564',
    'private_fast_refresh': True,
    'quarter': 8,
    'season': 'R',
    'series_summary': None,
    'sport': 'baseball',
    'sport_path': 'mlbstats',
    'state': 'IN',
    'strikes': 0,
    'team_abbr': 'CLT',
    'team_colors': list([
      '#111111',
      '#C5A059',
    ]),
    'team_conference_id': 'International League East',
    'team_homeaway': 'home',
    'team_id': '494',
    'team_logo': 'https://www.mlbstatic.com/team-logos/team-cap-on-light/494.svg',
    'team_long_name': 'Charlotte Knights',
    'team_name': 'Knights',
    'team_rank': None,
    'team_record': '29-26',
    'team_score': '5',
    'team_sets_won': None,
    'team_shots_on_target': None,
    'team_stream': None,
    'team_timeouts': None,
    'team_total_shots': None,
    'team_url': 'https://www.milb.com/charlotte',
    'team_win_probability': None,
    'team_winner': None,
    'tv_network': None,
    'venue': 'Truist Field',
  })
# ---
# name: test_mlbstats[test_invalid_team]
  dict({
    'api_message': "No competition scheduled for 'INVALID_TEAM_ID' in MLB Stats between 2026-05-30T00:00Z and 2026-05-30T23:59Z",
    'api_url': 'https://statsapi.mlb.com/api/v1/schedule/games?sportId=11&startDate=2026-05-22&endDate=2026-05-24',
    'attribution': 'Copyright 2026 MLB Advanced Media',
    'balls': None,
    'clock': None,
    'date': None,
    'down_distance_text': None,
    'event_id': None,
    'event_name': None,
    'event_stream': None,
    'event_url': 'https://www.milb.com/gameday/None',
    'friendly_name': 'test_invalid_team',
    'icon': 'mdi:scoreboard',
    'last_play': None,
    'league': 'XXX',
    'league_logo': 'https://www.mlbstatic.com/team-logos/league-on-light/milb-alt.svg',
    'league_name': None,
    'league_path': 'aaa',
    'location': None,
    'odds': None,
    'on_first': None,
    'on_second': None,
    'on_third': None,
    'opponent_abbr': None,
    'opponent_colors': None,
    'opponent_conference_id': None,
    'opponent_homeaway': None,
    'opponent_id': None,
    'opponent_logo': None,
    'opponent_long_name': None,
    'opponent_name': None,
    'opponent_rank': None,
    'opponent_record': None,
    'opponent_score': None,
    'opponent_sets_won': None,
    'opponent_shots_on_target': None,
    'opponent_stream': None,
    'opponent_timeouts': None,
    'opponent_total_shots': None,
    'opponent_url': None,
    'opponent_win_probability': None,
    'opponent_winner': None,
    'outs': None,
    'overunder': None,
    'possession': None,
    'private_fast_refresh': False,
    'quarter': None,
    'season': None,
    'series_summary': None,
    'sport': 'baseball',
    'sport_path': 'mlbstats',
    'state': 'NOT_FOUND',
    'strikes': None,
    'team_abbr': 'INVALID_TEAM_ID',
    'team_colors': None,
    'team_conference_id': None,
    'team_homeaway': None,
    'team_id': None,
    'team_logo': None,
    'team_long_name': None,
    'team_name': None,
    'team_rank': None,
    'team_record': None,
    'team_score': None,
    'team_sets_won': None,
    'team_shots_on_target': None,
    'team_stream': None,
    'team_timeouts': None,
    'team_total_shots': None,
    'team_url': None,
    'team_win_probability': None,
    'team_winner': None,
    'tv_network': None,
    'venue': None,
  })
# ---
# name: test_mlbstats[test_post]
  dict({
    'api_message': None,
    'api_url': 'https://statsapi.mlb.com/api/v1/schedule/games?sportId=11&startDate=2026-05-22&endDate=2026-05-24',
    'attribution': 'Copyright 2026 MLB Advanced Media',
    'balls': None,
    'clock': 'Final',
    'date': '2026-05-30T17:05:00Z',
    'down_distance_text': None,
    'event_id': '816952',
    'event_name': 'LHV@BUF',
    'event_stream': None,
    'event_url': 'https://www.milb.com/gameday/816952',
    'friendly_name': 'test_post',
    'icon': 'mdi:scoreboard',
    'last_play': None,
    'league': 'XXX',
    'league_logo': 'https://www.mlbstatic.com/team-logos/league-on-light/milb-alt.svg',
    'league_name': None,
    'league_path': 'aaa',
    'location': None,
    'odds': None,
    'on_first': None,
    'on_second': None,
    'on_third': None,
    'opponent_abbr': 'LHV',
    'opponent_colors': list([
      '#0C2340',
      '#8A9EA7',
    ]),
    'opponent_conference_id': None,
    'opponent_homeaway': 'away',
    'opponent_id': '1410',
    'opponent_logo': 'https://www.mlbstatic.com/team-logos/team-cap-on-light/1410.svg',
    'opponent_long_name': 'Lehigh Valley IronPigs',
    'opponent_name': 'Lehigh Valley IronPigs',
    'opponent_rank': None,
    'opponent_record': '26-30',
    'opponent_score': '5',
    'opponent_sets_won': None,
    'opponent_shots_on_target': None,
    'opponent_stream': None,
    'opponent_timeouts': None,
    'opponent_total_shots': None,
    'opponent_url': 'https://www.milb.com/lehigh-valley',
    'opponent_win_probability': None,
    'opponent_winner': False,
    'outs': None,
    'overunder': None,
    'possession': None,
    'private_fast_refresh': False,
    'quarter': None,
    'season': 'R',
    'series_summary': None,
    'sport': 'baseball',
    'sport_path': 'mlbstats',
    'state': 'POST',
    'strikes': None,
    'team_abbr': 'BUF',
    'team_colors': list([
      '#041E42',
      '#C8102E',
    ]),
    'team_conference_id': None,
    'team_homeaway': 'home',
    'team_id': '422',
    'team_logo': 'https://www.mlbstatic.com/team-logos/team-cap-on-light/422.svg',
    'team_long_name': 'Buffalo Bisons',
    'team_name': 'Buffalo Bisons',
    'team_rank': None,
    'team_record': '27-29',
    'team_score': '6',
    'team_sets_won': None,
    'team_shots_on_target': None,
    'team_stream': None,
    'team_timeouts': None,
    'team_total_shots': None,
    'team_url': 'https://www.milb.com/buffalo',
    'team_win_probability': None,
    'team_winner': True,
    'tv_network': None,
    'venue': 'Sahlen Field',
  })
# ---
# name: test_mlbstats[test_pre]
  dict({
    'api_message': None,
    'api_url': 'https://statsapi.mlb.com/api/v1/schedule/games?sportId=11&startDate=2026-05-22&endDate=2026-05-24',
    'attribution': 'Copyright 2026 MLB Advanced Media',
    'balls': None,
    'clock': 'Scheduled',
    'date': '2026-05-31T01:35:00Z',
    'down_distance_text': None,
    'event_id': '815146',
    'event_name': 'SAC@RNO',
    'event_stream': None,
    'event_url': 'https://www.milb.com/gameday/815146',
    'friendly_name': 'test_pre',
    'icon': 'mdi:scoreboard',
    'last_play': None,
    'league': 'XXX',
    'league_logo': 'https://www.mlbstatic.com/team-logos/league-on-light/milb-alt.svg',
    'league_name': None,
    'league_path': 'aaa',
    'location': None,
    'odds': None,
    'on_first': None,
    'on_second': None,
    'on_third': None,
    'opponent_abbr': 'RNO',
    'opponent_colors': list([
      '#A71930',
      '#0C2340',
    ]),
    'opponent_conference_id': None,
    'opponent_homeaway': 'home',
    'opponent_id': '2310',
    'opponent_logo': 'https://www.mlbstatic.com/team-logos/team-cap-on-light/2310.svg',
    'opponent_long_name': 'Reno Aces',
    'opponent_name': 'Reno Aces',
    'opponent_rank': None,
    'opponent_record': '25-30',
    'opponent_score': '',
    'opponent_sets_won': None,
    'opponent_shots_on_target': None,
    'opponent_stream': None,
    'opponent_timeouts': None,
    'opponent_total_shots': None,
    'opponent_url': 'https://www.milb.com/reno',
    'opponent_win_probability': None,
    'opponent_winner': None,
    'outs': None,
    'overunder': None,
    'possession': None,
    'private_fast_refresh': False,
    'quarter': None,
    'season': 'R',
    'series_summary': None,
    'sport': 'baseball',
    'sport_path': 'mlbstats',
    'state': 'PRE',
    'strikes': None,
    'team_abbr': 'SAC',
    'team_colors': list([
      '#941C2E',
      '#231F20',
    ]),
    'team_conference_id': None,
    'team_homeaway': 'away',
    'team_id': '105',
    'team_logo': 'https://www.mlbstatic.com/team-logos/team-cap-on-light/105.svg',
    'team_long_name': 'Sacramento River Cats',
    'team_name': 'Sacramento River Cats',
    'team_rank': None,
    'team_record': '32-21',
    'team_score': '',
    'team_sets_won': None,
    'team_shots_on_target': None,
    'team_stream': None,
    'team_timeouts': None,
    'team_total_shots': None,
    'team_url': 'https://www.milb.com/sacramento',
    'team_win_probability': None,
    'team_winner': None,
    'tv_network': None,
    'venue': 'Greater Nevada Field',
  })
# ---
